<resources>
    <string name="app_name">ConnectMap</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_settings">Settings</string>
    <string name="db_error">Database error happened! Try again later :(</string>
    <string name="upload_is_in_prog">Upload is in progress</string>
    <string name="txt_too_long">Text is too long, it should below 225 characters!</string>
    <string name="txt_too_short">Text should be at least 5 characters!</string>
    <string name="posted_success">Your post has been sent! Yay! :)</string>
    <string name="change_img">Change image</string>
    <string name="add_img">Add image</string>
    <string name="new_post">New post</string>
    <string name="permission_needed">Permission needed</string>
    <string name="loc_permission_explain">ConnectMap depends heavily on location functions. Please give us access to your device location!</string>
    <string name="ok">OK</string>
    <string name="location_error">Error: Can\'t get your location.</string>
    <string name="invalid_adress">Invalid address</string>
    <string name="no">NO</string>
    <string name="search_loc">Type to search for location</string>
    <string name="your_location">Your location:</string>
    <string name="share_your_thoughts">Share your thoughts</string>
    <string name="add_image">Add image</string>
    <string name="clear_image">Clear image</string>
    <string name="radius">Radius</string>
    <string name="settings_radius_desc">Change radius around the selected location, where you see posts (in kilometers).</string>
    <string name="location_settings">Location settings</string>
    <string name="time_settings">Time settings</string>
    <string name="time_interval">Time interval</string>
    <string name="settings_time_interval_desc">By default you see posts from the past 24 hours. If you want to change that time, do it here. (in hours)</string>
    <string name="back_to_def">Back to default</string>
    <string name="rst_settings">Reset settings</string>
    <string name="settings_rst_desc">If you want to go back to default.</string>
    <string name="map_view">Map view</string>
    <string name="change_sort">Change sort</string>
    <string name="sort_by_score">Sort by score</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="search">Search</string>
    <string name="date_origo">Date origo</string>
    <string name="date_origo_desc">Choose the date you want to be as the origo when see posts. The default is always the current date.</string>
    <string name="no_internet">No internet connection</string>
</resources>
