<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NewPostActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/your_location"
                android:textStyle="bold"
                android:textSize="16sp"
                app:textAllCaps="true"/>

            <TextView
                android:id="@+id/location_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="0,0" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/share_your_thoughts"
            app:counterEnabled="true"
            app:counterMaxLength="225"
            android:layout_margin="10dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/post_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="5"
                android:gravity="top"
                android:ems="10"
                android:inputType="textMultiLine"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_img_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_image"
                app:textAllCaps="true"
                app:icon="@drawable/ic_attach_file_black_24dp"
                android:textSize="14sp"
                android:layout_margin="10dp"
                android:layout_gravity="center"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/clear_img_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_image"
                app:textAllCaps="true"
                app:icon="@drawable/ic_clear_black_24dp"
                android:textSize="14sp"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:visibility="gone"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>

        <ImageView
            android:id="@+id/attachment_img"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>